docs: add documentation for list openings
